// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Select /> > renders correctly with default option 1`] = `
<DocumentFragment>
  .c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-right: 5px;
}

.c1 {
  width: 42px;
}

.c2 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c3 {
  font-size: 15px;
  font-weight: 500;
  word-break: break-word;
}

.c4 {
  font-size: 14px;
  font-weight: 400;
  word-break: break-word;
}

.c0 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

.c0:hover {
  background: rgba(217, 217, 217, 0.2);
}

<div>
    <div
      class="c0"
      id="action-bar-send-test 2"
    >
      <div
        class="c1"
      >
        <svg
          class="rounded-md"
          data-testid="random-avatar"
          fill="none"
          role="img"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <mask
            height="80"
            id=":r2:"
            maskUnits="userSpaceOnUse"
            width="80"
            x="0"
            y="0"
          >
            <rect
              fill="#FFFFFF"
              height="80"
              rx="160"
              width="80"
            />
          </mask>
          <g
            mask="url(#:r2:)"
          >
            <rect
              fill="#146A7C"
              height="80"
              width="80"
            />
            <path
              d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z"
              fill="#F0AB3D"
              filter="url(#filter_:r2:)"
              transform="translate(0 0) rotate(352 40 40) scale(1.2)"
            />
            <path
              d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z"
              fill="#C271B4"
              filter="url(#filter_:r2:)"
              style="mix-blend-mode: overlay;"
              transform="translate(-4 -4) rotate(-348 40 40) scale(1.2)"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              id="filter_:r2:"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <feblend
                in="SourceGraphic"
                in2="BackgroundImageFix"
                result="shape"
              />
              <fegaussianblur
                result="effect1_foregroundBlur"
                stdDeviation="7"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          test 2
        </p>
        <p
          class="c4"
        >
          test2
        </p>
      </div>
      <div
        class="c5"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Select /> > renders correctly with no options 1`] = `
<DocumentFragment>
  .c0 {
  padding: 13px 13px 13px;
  background: transparent;
  border: 1px solid rgba(226, 221, 255, 0.15);
  color: rgba(226, 221, 255, 0.9);
  margin-bottom: 15px;
  font-size: 12px;
  border-radius: 6px;
  min-height: 35px;
  display: flex;
  align-items: center;
}

.c0:last-child {
  margin-bottom: 0;
}

.c1 {
  display: inline-block;
  margin-right: 10px;
}

<div>
    <p
      class="c0"
    >
      <span
        class="c1"
      >
        <svg
          fill="none"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 9v5M12 21.41H5.94c-3.47 0-4.92-2.48-3.24-5.51l3.12-5.62L8.76 5c1.78-3.21 4.7-3.21 6.48 0l2.94 5.29 3.12 5.62c1.68 3.03.22 5.51-3.24 5.51H12v-.01Z"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M11.995 17h.009"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </span>
      error.noNftsFound
    </p>
  </div>
</DocumentFragment>
`;

exports[`<Select /> > renders correctly with option image 1`] = `
<DocumentFragment>
  .c5 {
  width: 42px;
  height: 42px;
  border-radius: 50%;
}

.c1 {
  width: 42px;
}

.c2 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c3 {
  font-size: 15px;
  font-weight: 500;
  word-break: break-word;
}

.c4 {
  font-size: 14px;
  font-weight: 400;
  word-break: break-word;
}

.c0 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

.c0:hover {
  background: rgba(217, 217, 217, 0.2);
}

<div>
    <div
      class="c0"
      id="action-bar-send-test 1"
    >
      <div
        class="c1"
      >
        <svg
          class="rounded-md"
          data-testid="random-avatar"
          fill="none"
          role="img"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <mask
            height="80"
            id=":r5:"
            maskUnits="userSpaceOnUse"
            width="80"
            x="0"
            y="0"
          >
            <rect
              fill="#FFFFFF"
              height="80"
              rx="160"
              width="80"
            />
          </mask>
          <g
            mask="url(#:r5:)"
          >
            <rect
              fill="#F0AB3D"
              height="80"
              width="80"
            />
            <path
              d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z"
              fill="#C271B4"
              filter="url(#filter_:r5:)"
              transform="translate(2 2) rotate(354 40 40) scale(1.5)"
            />
            <path
              d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z"
              fill="#C20D90"
              filter="url(#filter_:r5:)"
              style="mix-blend-mode: overlay;"
              transform="translate(7 -7) rotate(351 40 40) scale(1.5)"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              id="filter_:r5:"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <feblend
                in="SourceGraphic"
                in2="BackgroundImageFix"
                result="shape"
              />
              <fegaussianblur
                result="effect1_foregroundBlur"
                stdDeviation="7"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          test 1
        </p>
        <p
          class="c4"
        >
          test1
        </p>
      </div>
    </div>
    <div
      class="c0"
      id="action-bar-send-test 2"
    >
      <div
        class="c1"
      >
        <svg
          class="rounded-md"
          data-testid="random-avatar"
          fill="none"
          role="img"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <mask
            height="80"
            id=":r6:"
            maskUnits="userSpaceOnUse"
            width="80"
            x="0"
            y="0"
          >
            <rect
              fill="#FFFFFF"
              height="80"
              rx="160"
              width="80"
            />
          </mask>
          <g
            mask="url(#:r6:)"
          >
            <rect
              fill="#146A7C"
              height="80"
              width="80"
            />
            <path
              d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z"
              fill="#F0AB3D"
              filter="url(#filter_:r6:)"
              transform="translate(0 0) rotate(352 40 40) scale(1.2)"
            />
            <path
              d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z"
              fill="#C271B4"
              filter="url(#filter_:r6:)"
              style="mix-blend-mode: overlay;"
              transform="translate(-4 -4) rotate(-348 40 40) scale(1.2)"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              id="filter_:r6:"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <feblend
                in="SourceGraphic"
                in2="BackgroundImageFix"
                result="shape"
              />
              <fegaussianblur
                result="effect1_foregroundBlur"
                stdDeviation="7"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          test 2
        </p>
        <p
          class="c4"
        >
          test2
        </p>
      </div>
    </div>
    <div
      class="c0"
      id="action-bar-send-test 3"
    >
      <div
        class="c1"
      >
        <img
          alt="test 3"
          class="c5"
          src="https://via.placeholder.com/150"
          title="test 3"
        />
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          test 3
        </p>
        <p
          class="c4"
        >
          test3
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Select /> > renders correctly with selected option image 1`] = `
<DocumentFragment>
  .c2 {
  width: 42px;
  height: 42px;
  border-radius: 50%;
}

.c6 {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-right: 5px;
}

.c1 {
  width: 42px;
}

.c3 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c4 {
  font-size: 15px;
  font-weight: 500;
  word-break: break-word;
}

.c5 {
  font-size: 14px;
  font-weight: 400;
  word-break: break-word;
}

.c0 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

.c0:hover {
  background: rgba(217, 217, 217, 0.2);
}

<div>
    <div
      class="c0"
      id="action-bar-send-test 3"
    >
      <div
        class="c1"
      >
        <img
          alt="test 3"
          class="c2"
          src="https://via.placeholder.com/150"
          title="test 3"
        />
      </div>
      <div
        class="c3"
      >
        <p
          class="c4"
        >
          test 3
        </p>
        <p
          class="c5"
        >
          test3
        </p>
      </div>
      <div
        class="c6"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Select /> > renders correctly with some options 1`] = `
<DocumentFragment>
  .c5 {
  width: 42px;
  height: 42px;
  border-radius: 50%;
}

.c1 {
  width: 42px;
}

.c2 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c3 {
  font-size: 15px;
  font-weight: 500;
  word-break: break-word;
}

.c4 {
  font-size: 14px;
  font-weight: 400;
  word-break: break-word;
}

.c0 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

.c0:hover {
  background: rgba(217, 217, 217, 0.2);
}

<div>
    <div
      class="c0"
      id="action-bar-send-test 1"
    >
      <div
        class="c1"
      >
        <svg
          class="rounded-md"
          data-testid="random-avatar"
          fill="none"
          role="img"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <mask
            height="80"
            id=":r0:"
            maskUnits="userSpaceOnUse"
            width="80"
            x="0"
            y="0"
          >
            <rect
              fill="#FFFFFF"
              height="80"
              rx="160"
              width="80"
            />
          </mask>
          <g
            mask="url(#:r0:)"
          >
            <rect
              fill="#F0AB3D"
              height="80"
              width="80"
            />
            <path
              d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z"
              fill="#C271B4"
              filter="url(#filter_:r0:)"
              transform="translate(2 2) rotate(354 40 40) scale(1.5)"
            />
            <path
              d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z"
              fill="#C20D90"
              filter="url(#filter_:r0:)"
              style="mix-blend-mode: overlay;"
              transform="translate(7 -7) rotate(351 40 40) scale(1.5)"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              id="filter_:r0:"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <feblend
                in="SourceGraphic"
                in2="BackgroundImageFix"
                result="shape"
              />
              <fegaussianblur
                result="effect1_foregroundBlur"
                stdDeviation="7"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          test 1
        </p>
        <p
          class="c4"
        >
          test1
        </p>
      </div>
    </div>
    <div
      class="c0"
      id="action-bar-send-test 2"
    >
      <div
        class="c1"
      >
        <svg
          class="rounded-md"
          data-testid="random-avatar"
          fill="none"
          role="img"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <mask
            height="80"
            id=":r1:"
            maskUnits="userSpaceOnUse"
            width="80"
            x="0"
            y="0"
          >
            <rect
              fill="#FFFFFF"
              height="80"
              rx="160"
              width="80"
            />
          </mask>
          <g
            mask="url(#:r1:)"
          >
            <rect
              fill="#146A7C"
              height="80"
              width="80"
            />
            <path
              d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z"
              fill="#F0AB3D"
              filter="url(#filter_:r1:)"
              transform="translate(0 0) rotate(352 40 40) scale(1.2)"
            />
            <path
              d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z"
              fill="#C271B4"
              filter="url(#filter_:r1:)"
              style="mix-blend-mode: overlay;"
              transform="translate(-4 -4) rotate(-348 40 40) scale(1.2)"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              id="filter_:r1:"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <feblend
                in="SourceGraphic"
                in2="BackgroundImageFix"
                result="shape"
              />
              <fegaussianblur
                result="effect1_foregroundBlur"
                stdDeviation="7"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          test 2
        </p>
        <p
          class="c4"
        >
          test2
        </p>
      </div>
    </div>
    <div
      class="c0"
      id="action-bar-send-test 3"
    >
      <div
        class="c1"
      >
        <img
          alt="test 3"
          class="c5"
          src="https://via.placeholder.com/150"
          title="test 3"
        />
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          test 3
        </p>
        <p
          class="c4"
        >
          test3
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Select /> > responds once clicked 1`] = `
<DocumentFragment>
  .c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-right: 5px;
}

.c1 {
  width: 42px;
}

.c2 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c3 {
  font-size: 15px;
  font-weight: 500;
  word-break: break-word;
}

.c4 {
  font-size: 14px;
  font-weight: 400;
  word-break: break-word;
}

.c0 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

.c0:hover {
  background: rgba(217, 217, 217, 0.2);
}

<div>
    <div
      class="c0"
      id="action-bar-send-test 2"
    >
      <div
        class="c1"
      >
        <svg
          class="rounded-md"
          data-testid="random-avatar"
          fill="none"
          role="img"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <mask
            height="80"
            id=":r4:"
            maskUnits="userSpaceOnUse"
            width="80"
            x="0"
            y="0"
          >
            <rect
              fill="#FFFFFF"
              height="80"
              rx="160"
              width="80"
            />
          </mask>
          <g
            mask="url(#:r4:)"
          >
            <rect
              fill="#146A7C"
              height="80"
              width="80"
            />
            <path
              d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z"
              fill="#F0AB3D"
              filter="url(#filter_:r4:)"
              transform="translate(0 0) rotate(352 40 40) scale(1.2)"
            />
            <path
              d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z"
              fill="#C271B4"
              filter="url(#filter_:r4:)"
              style="mix-blend-mode: overlay;"
              transform="translate(-4 -4) rotate(-348 40 40) scale(1.2)"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              id="filter_:r4:"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <feblend
                in="SourceGraphic"
                in2="BackgroundImageFix"
                result="shape"
              />
              <fegaussianblur
                result="effect1_foregroundBlur"
                stdDeviation="7"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          test 2
        </p>
        <p
          class="c4"
        >
          test2
        </p>
      </div>
      <div
        class="c5"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Select /> > shows loading skeleton on option item where option value is loading 1`] = `
<DocumentFragment>
  .c5 {
  height: 15px;
  width: 30%;
  animation: hLhBjP 1s linear infinite alternate;
  border-radius: 8px;
  margin-bottom: 0;
  margin-top: 0;
}

.c6 {
  width: 42px;
  height: 42px;
  border-radius: 50%;
}

.c1 {
  width: 42px;
}

.c2 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c3 {
  font-size: 15px;
  font-weight: 500;
  word-break: break-word;
}

.c4 {
  font-size: 14px;
  font-weight: 400;
  word-break: break-word;
}

.c0 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

.c0:hover {
  background: rgba(217, 217, 217, 0.2);
}

<div>
    <div
      class="c0"
      id="action-bar-send-test 1"
    >
      <div
        class="c1"
      >
        <svg
          class="rounded-md"
          data-testid="random-avatar"
          fill="none"
          role="img"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <mask
            height="80"
            id=":r3:"
            maskUnits="userSpaceOnUse"
            width="80"
            x="0"
            y="0"
          >
            <rect
              fill="#FFFFFF"
              height="80"
              rx="160"
              width="80"
            />
          </mask>
          <g
            mask="url(#:r3:)"
          >
            <rect
              fill="#F0AB3D"
              height="80"
              width="80"
            />
            <path
              d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z"
              fill="#C271B4"
              filter="url(#filter_:r3:)"
              transform="translate(2 2) rotate(354 40 40) scale(1.5)"
            />
            <path
              d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z"
              fill="#C20D90"
              filter="url(#filter_:r3:)"
              style="mix-blend-mode: overlay;"
              transform="translate(7 -7) rotate(351 40 40) scale(1.5)"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              id="filter_:r3:"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <feblend
                in="SourceGraphic"
                in2="BackgroundImageFix"
                result="shape"
              />
              <fegaussianblur
                result="effect1_foregroundBlur"
                stdDeviation="7"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          test 1
        </p>
        <p
          class="c4"
        >
          test1
        </p>
      </div>
    </div>
    <div
      class="c0"
      id="action-bar-send-test 2"
    >
      <div
        class="c1"
      >
        <svg
          class="rounded-md"
          data-testid="random-avatar"
          fill="none"
          role="img"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <mask
            height="80"
            id=":r4:"
            maskUnits="userSpaceOnUse"
            width="80"
            x="0"
            y="0"
          >
            <rect
              fill="#FFFFFF"
              height="80"
              rx="160"
              width="80"
            />
          </mask>
          <g
            mask="url(#:r4:)"
          >
            <rect
              fill="#146A7C"
              height="80"
              width="80"
            />
            <path
              d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z"
              fill="#F0AB3D"
              filter="url(#filter_:r4:)"
              transform="translate(0 0) rotate(352 40 40) scale(1.2)"
            />
            <path
              d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z"
              fill="#C271B4"
              filter="url(#filter_:r4:)"
              style="mix-blend-mode: overlay;"
              transform="translate(-4 -4) rotate(-348 40 40) scale(1.2)"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              id="filter_:r4:"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <feblend
                in="SourceGraphic"
                in2="BackgroundImageFix"
                result="shape"
              />
              <fegaussianblur
                result="effect1_foregroundBlur"
                stdDeviation="7"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          test 2
        </p>
        <div
          class="c5"
          data-testid="skeleton-loader-list-item"
        />
      </div>
    </div>
    <div
      class="c0"
      id="action-bar-send-test 3"
    >
      <div
        class="c1"
      >
        <img
          alt="test 3"
          class="c6"
          src="https://via.placeholder.com/150"
          title="test 3"
        />
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          test 3
        </p>
        <p
          class="c4"
        >
          test3
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Select /> > shows loading skeleton when options loading 1`] = `
<DocumentFragment>
  .c2 {
  height: 42px;
  width: 42px;
  animation: hLhBjP 1s linear infinite alternate;
  border-radius: 50%;
  margin-bottom: 0;
  margin-top: 0;
}

.c4 {
  height: 15px;
  width: 80%;
  animation: hLhBjP 1s linear infinite alternate;
  border-radius: 8px;
  margin-bottom: 0;
  margin-top: 0;
}

.c5 {
  height: 15px;
  width: 30%;
  animation: hLhBjP 1s linear infinite alternate;
  border-radius: 8px;
  margin-bottom: 0;
  margin-top: 0;
}

.c1 {
  width: 42px;
}

.c3 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c0 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      />
      <div
        class="c5"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Select /> renders correctly with default option 1`] = `
<DocumentFragment>
  .c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-right: 5px;
}

.c1 {
  width: 42px;
}

.c2 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c3 {
  font-size: 15px;
  font-weight: 500;
  word-break: break-word;
}

.c4 {
  font-size: 14px;
  font-weight: 400;
  word-break: break-word;
}

.c0 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

.c0:hover {
  background: rgba(217, 217, 217, 0.2);
}

<div>
    <div
      class="c0"
      id="action-bar-send-test 2"
    >
      <div
        class="c1"
      >
        <svg
          class="rounded-md"
          data-testid="random-avatar"
          fill="none"
          role="img"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <mask
            height="80"
            id=":r5:"
            maskUnits="userSpaceOnUse"
            width="80"
            x="0"
            y="0"
          >
            <rect
              fill="#FFFFFF"
              height="80"
              rx="160"
              width="80"
            />
          </mask>
          <g
            mask="url(#:r5:)"
          >
            <rect
              fill="#146A7C"
              height="80"
              width="80"
            />
            <path
              d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z"
              fill="#F0AB3D"
              filter="url(#filter_:r5:)"
              transform="translate(0 0) rotate(352 40 40) scale(1.2)"
            />
            <path
              d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z"
              fill="#C271B4"
              filter="url(#filter_:r5:)"
              style="mix-blend-mode: overlay;"
              transform="translate(-4 -4) rotate(-348 40 40) scale(1.2)"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              id="filter_:r5:"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <feblend
                in="SourceGraphic"
                in2="BackgroundImageFix"
                result="shape"
              />
              <fegaussianblur
                result="effect1_foregroundBlur"
                stdDeviation="7"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          test 2
        </p>
        <p
          class="c4"
        >
          test2
        </p>
      </div>
      <div
        class="c5"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Select /> renders correctly with no options 1`] = `
<DocumentFragment>
  .c0 {
  padding: 13px 13px 13px;
  background: transparent;
  border: 1px solid rgba(226, 221, 255, 0.15);
  color: rgba(226, 221, 255, 0.9);
  margin-bottom: 15px;
  font-size: 12px;
  border-radius: 6px;
  min-height: 35px;
  display: flex;
  align-items: center;
}

.c0:last-child {
  margin-bottom: 0;
}

.c1 {
  display: inline-block;
  margin-right: 10px;
}

<div>
    <p
      class="c0"
    >
      <span
        class="c1"
      >
        <svg
          fill="none"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 9v5M12 21.41H5.94c-3.47 0-4.92-2.48-3.24-5.51l3.12-5.62L8.76 5c1.78-3.21 4.7-3.21 6.48 0l2.94 5.29 3.12 5.62c1.68 3.03.22 5.51-3.24 5.51H12v-.01Z"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="1.5"
          />
          <path
            d="M11.995 17h.009"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
      </span>
      error.noNftsFound
    </p>
  </div>
</DocumentFragment>
`;

exports[`<Select /> renders correctly with option image 1`] = `
<DocumentFragment>
  .c5 {
  width: 42px;
  height: 42px;
  border-radius: 50%;
}

.c1 {
  width: 42px;
}

.c2 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c3 {
  font-size: 15px;
  font-weight: 500;
  word-break: break-word;
}

.c4 {
  font-size: 14px;
  font-weight: 400;
  word-break: break-word;
}

.c0 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

.c0:hover {
  background: rgba(217, 217, 217, 0.2);
}

<div>
    <div
      class="c0"
      id="action-bar-send-test 1"
    >
      <div
        class="c1"
      >
        <svg
          class="rounded-md"
          data-testid="random-avatar"
          fill="none"
          role="img"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <mask
            height="80"
            id=":r8:"
            maskUnits="userSpaceOnUse"
            width="80"
            x="0"
            y="0"
          >
            <rect
              fill="#FFFFFF"
              height="80"
              rx="160"
              width="80"
            />
          </mask>
          <g
            mask="url(#:r8:)"
          >
            <rect
              fill="#F0AB3D"
              height="80"
              width="80"
            />
            <path
              d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z"
              fill="#C271B4"
              filter="url(#filter_:r8:)"
              transform="translate(2 2) rotate(354 40 40) scale(1.5)"
            />
            <path
              d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z"
              fill="#C20D90"
              filter="url(#filter_:r8:)"
              style="mix-blend-mode: overlay;"
              transform="translate(7 -7) rotate(351 40 40) scale(1.5)"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              id="filter_:r8:"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <feblend
                in="SourceGraphic"
                in2="BackgroundImageFix"
                result="shape"
              />
              <fegaussianblur
                result="effect1_foregroundBlur"
                stdDeviation="7"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          test 1
        </p>
        <p
          class="c4"
        >
          test1
        </p>
      </div>
    </div>
    <div
      class="c0"
      id="action-bar-send-test 2"
    >
      <div
        class="c1"
      >
        <svg
          class="rounded-md"
          data-testid="random-avatar"
          fill="none"
          role="img"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <mask
            height="80"
            id=":r9:"
            maskUnits="userSpaceOnUse"
            width="80"
            x="0"
            y="0"
          >
            <rect
              fill="#FFFFFF"
              height="80"
              rx="160"
              width="80"
            />
          </mask>
          <g
            mask="url(#:r9:)"
          >
            <rect
              fill="#146A7C"
              height="80"
              width="80"
            />
            <path
              d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z"
              fill="#F0AB3D"
              filter="url(#filter_:r9:)"
              transform="translate(0 0) rotate(352 40 40) scale(1.2)"
            />
            <path
              d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z"
              fill="#C271B4"
              filter="url(#filter_:r9:)"
              style="mix-blend-mode: overlay;"
              transform="translate(-4 -4) rotate(-348 40 40) scale(1.2)"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              id="filter_:r9:"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <feblend
                in="SourceGraphic"
                in2="BackgroundImageFix"
                result="shape"
              />
              <fegaussianblur
                result="effect1_foregroundBlur"
                stdDeviation="7"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          test 2
        </p>
        <p
          class="c4"
        >
          test2
        </p>
      </div>
    </div>
    <div
      class="c0"
      id="action-bar-send-test 3"
    >
      <div
        class="c1"
      >
        <img
          alt="test 3"
          class="c5"
          src="https://via.placeholder.com/150"
          title="test 3"
        />
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          test 3
        </p>
        <p
          class="c4"
        >
          test3
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Select /> renders correctly with selected option image 1`] = `
<DocumentFragment>
  .c2 {
  width: 42px;
  height: 42px;
  border-radius: 50%;
}

.c6 {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-right: 5px;
}

.c1 {
  width: 42px;
}

.c3 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c4 {
  font-size: 15px;
  font-weight: 500;
  word-break: break-word;
}

.c5 {
  font-size: 14px;
  font-weight: 400;
  word-break: break-word;
}

.c0 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

.c0:hover {
  background: rgba(217, 217, 217, 0.2);
}

<div>
    <div
      class="c0"
      id="action-bar-send-test 3"
    >
      <div
        class="c1"
      >
        <img
          alt="test 3"
          class="c2"
          src="https://via.placeholder.com/150"
          title="test 3"
        />
      </div>
      <div
        class="c3"
      >
        <p
          class="c4"
        >
          test 3
        </p>
        <p
          class="c5"
        >
          test3
        </p>
      </div>
      <div
        class="c6"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Select /> renders correctly with some options 1`] = `
<DocumentFragment>
  .c5 {
  width: 42px;
  height: 42px;
  border-radius: 50%;
}

.c1 {
  width: 42px;
}

.c2 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c3 {
  font-size: 15px;
  font-weight: 500;
  word-break: break-word;
}

.c4 {
  font-size: 14px;
  font-weight: 400;
  word-break: break-word;
}

.c0 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

.c0:hover {
  background: rgba(217, 217, 217, 0.2);
}

<div>
    <div
      class="c0"
      id="action-bar-send-test 1"
    >
      <div
        class="c1"
      >
        <svg
          class="rounded-md"
          data-testid="random-avatar"
          fill="none"
          role="img"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <mask
            height="80"
            id=":r0:"
            maskUnits="userSpaceOnUse"
            width="80"
            x="0"
            y="0"
          >
            <rect
              fill="#FFFFFF"
              height="80"
              rx="160"
              width="80"
            />
          </mask>
          <g
            mask="url(#:r0:)"
          >
            <rect
              fill="#F0AB3D"
              height="80"
              width="80"
            />
            <path
              d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z"
              fill="#C271B4"
              filter="url(#filter_:r0:)"
              transform="translate(2 2) rotate(354 40 40) scale(1.5)"
            />
            <path
              d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z"
              fill="#C20D90"
              filter="url(#filter_:r0:)"
              style="mix-blend-mode: overlay;"
              transform="translate(7 -7) rotate(351 40 40) scale(1.5)"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              id="filter_:r0:"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <feblend
                in="SourceGraphic"
                in2="BackgroundImageFix"
                result="shape"
              />
              <fegaussianblur
                result="effect1_foregroundBlur"
                stdDeviation="7"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          test 1
        </p>
        <p
          class="c4"
        >
          test1
        </p>
      </div>
    </div>
    <div
      class="c0"
      id="action-bar-send-test 2"
    >
      <div
        class="c1"
      >
        <svg
          class="rounded-md"
          data-testid="random-avatar"
          fill="none"
          role="img"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <mask
            height="80"
            id=":r1:"
            maskUnits="userSpaceOnUse"
            width="80"
            x="0"
            y="0"
          >
            <rect
              fill="#FFFFFF"
              height="80"
              rx="160"
              width="80"
            />
          </mask>
          <g
            mask="url(#:r1:)"
          >
            <rect
              fill="#146A7C"
              height="80"
              width="80"
            />
            <path
              d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z"
              fill="#F0AB3D"
              filter="url(#filter_:r1:)"
              transform="translate(0 0) rotate(352 40 40) scale(1.2)"
            />
            <path
              d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z"
              fill="#C271B4"
              filter="url(#filter_:r1:)"
              style="mix-blend-mode: overlay;"
              transform="translate(-4 -4) rotate(-348 40 40) scale(1.2)"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              id="filter_:r1:"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <feblend
                in="SourceGraphic"
                in2="BackgroundImageFix"
                result="shape"
              />
              <fegaussianblur
                result="effect1_foregroundBlur"
                stdDeviation="7"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          test 2
        </p>
        <p
          class="c4"
        >
          test2
        </p>
      </div>
    </div>
    <div
      class="c0"
      id="action-bar-send-test 3"
    >
      <div
        class="c1"
      >
        <img
          alt="test 3"
          class="c5"
          src="https://via.placeholder.com/150"
          title="test 3"
        />
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          test 3
        </p>
        <p
          class="c4"
        >
          test3
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Select /> responds once clicked 1`] = `
<DocumentFragment>
  .c5 {
  display: flex;
  align-items: center;
  justify-content: center;
  padding-right: 5px;
}

.c1 {
  width: 42px;
}

.c2 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c3 {
  font-size: 15px;
  font-weight: 500;
  word-break: break-word;
}

.c4 {
  font-size: 14px;
  font-weight: 400;
  word-break: break-word;
}

.c0 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

.c0:hover {
  background: rgba(217, 217, 217, 0.2);
}

<div>
    <div
      class="c0"
      id="action-bar-send-test 2"
    >
      <div
        class="c1"
      >
        <svg
          class="rounded-md"
          data-testid="random-avatar"
          fill="none"
          role="img"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <mask
            height="80"
            id=":r4:"
            maskUnits="userSpaceOnUse"
            width="80"
            x="0"
            y="0"
          >
            <rect
              fill="#FFFFFF"
              height="80"
              rx="160"
              width="80"
            />
          </mask>
          <g
            mask="url(#:r4:)"
          >
            <rect
              fill="#146A7C"
              height="80"
              width="80"
            />
            <path
              d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z"
              fill="#F0AB3D"
              filter="url(#filter_:r4:)"
              transform="translate(0 0) rotate(352 40 40) scale(1.2)"
            />
            <path
              d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z"
              fill="#C271B4"
              filter="url(#filter_:r4:)"
              style="mix-blend-mode: overlay;"
              transform="translate(-4 -4) rotate(-348 40 40) scale(1.2)"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              id="filter_:r4:"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <feblend
                in="SourceGraphic"
                in2="BackgroundImageFix"
                result="shape"
              />
              <fegaussianblur
                result="effect1_foregroundBlur"
                stdDeviation="7"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          test 2
        </p>
        <p
          class="c4"
        >
          test2
        </p>
      </div>
      <div
        class="c5"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 256 256"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Select /> shows loading skeleton on option item where option value is loading 1`] = `
<DocumentFragment>
  .c5 {
  height: 15px;
  width: 30%;
  animation: hLhBjP 1s linear infinite alternate;
  border-radius: 8px;
  margin-bottom: 0;
  margin-top: 0;
}

.c6 {
  width: 42px;
  height: 42px;
  border-radius: 50%;
}

.c1 {
  width: 42px;
}

.c2 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c3 {
  font-size: 15px;
  font-weight: 500;
  word-break: break-word;
}

.c4 {
  font-size: 14px;
  font-weight: 400;
  word-break: break-word;
}

.c0 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

.c0:hover {
  background: rgba(217, 217, 217, 0.2);
}

<div>
    <div
      class="c0"
      id="action-bar-send-test 1"
    >
      <div
        class="c1"
      >
        <svg
          class="rounded-md"
          data-testid="random-avatar"
          fill="none"
          role="img"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <mask
            height="80"
            id=":r6:"
            maskUnits="userSpaceOnUse"
            width="80"
            x="0"
            y="0"
          >
            <rect
              fill="#FFFFFF"
              height="80"
              rx="160"
              width="80"
            />
          </mask>
          <g
            mask="url(#:r6:)"
          >
            <rect
              fill="#F0AB3D"
              height="80"
              width="80"
            />
            <path
              d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z"
              fill="#C271B4"
              filter="url(#filter_:r6:)"
              transform="translate(2 2) rotate(354 40 40) scale(1.5)"
            />
            <path
              d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z"
              fill="#C20D90"
              filter="url(#filter_:r6:)"
              style="mix-blend-mode: overlay;"
              transform="translate(7 -7) rotate(351 40 40) scale(1.5)"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              id="filter_:r6:"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <feblend
                in="SourceGraphic"
                in2="BackgroundImageFix"
                result="shape"
              />
              <fegaussianblur
                result="effect1_foregroundBlur"
                stdDeviation="7"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          test 1
        </p>
        <p
          class="c4"
        >
          test1
        </p>
      </div>
    </div>
    <div
      class="c0"
      id="action-bar-send-test 2"
    >
      <div
        class="c1"
      >
        <svg
          class="rounded-md"
          data-testid="random-avatar"
          fill="none"
          role="img"
          viewBox="0 0 80 80"
          xmlns="http://www.w3.org/2000/svg"
        >
          <mask
            height="80"
            id=":r7:"
            maskUnits="userSpaceOnUse"
            width="80"
            x="0"
            y="0"
          >
            <rect
              fill="#FFFFFF"
              height="80"
              rx="160"
              width="80"
            />
          </mask>
          <g
            mask="url(#:r7:)"
          >
            <rect
              fill="#146A7C"
              height="80"
              width="80"
            />
            <path
              d="M32.414 59.35L50.376 70.5H72.5v-71H33.728L26.5 13.381l19.057 27.08L32.414 59.35z"
              fill="#F0AB3D"
              filter="url(#filter_:r7:)"
              transform="translate(0 0) rotate(352 40 40) scale(1.2)"
            />
            <path
              d="M22.216 24L0 46.75l14.108 38.129L78 86l-3.081-59.276-22.378 4.005 12.972 20.186-23.35 27.395L22.215 24z"
              fill="#C271B4"
              filter="url(#filter_:r7:)"
              style="mix-blend-mode: overlay;"
              transform="translate(-4 -4) rotate(-348 40 40) scale(1.2)"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              id="filter_:r7:"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <feblend
                in="SourceGraphic"
                in2="BackgroundImageFix"
                result="shape"
              />
              <fegaussianblur
                result="effect1_foregroundBlur"
                stdDeviation="7"
              />
            </filter>
          </defs>
        </svg>
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          test 2
        </p>
        <div
          class="c5"
          data-testid="skeleton-loader-list-item"
        />
      </div>
    </div>
    <div
      class="c0"
      id="action-bar-send-test 3"
    >
      <div
        class="c1"
      >
        <img
          alt="test 3"
          class="c6"
          src="https://via.placeholder.com/150"
          title="test 3"
        />
      </div>
      <div
        class="c2"
      >
        <p
          class="c3"
        >
          test 3
        </p>
        <p
          class="c4"
        >
          test3
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Select /> shows loading skeleton when options loading 1`] = `
<DocumentFragment>
  .c2 {
  height: 42px;
  width: 42px;
  animation: hLhBjP 1s linear infinite alternate;
  border-radius: 50%;
  margin-bottom: 0;
  margin-top: 0;
}

.c4 {
  height: 15px;
  width: 80%;
  animation: hLhBjP 1s linear infinite alternate;
  border-radius: 8px;
  margin-bottom: 0;
  margin-top: 0;
}

.c5 {
  height: 15px;
  width: 30%;
  animation: hLhBjP 1s linear infinite alternate;
  border-radius: 8px;
  margin-bottom: 0;
  margin-top: 0;
}

.c1 {
  width: 42px;
}

.c3 {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c0 {
  border-radius: 10px;
  background: rgba(217, 217, 217, 0.05);
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  gap: 12px;
  padding: 11px 13px;
  cursor: pointer;
  user-select: none;
  margin-bottom: 10px;
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      />
    </div>
    <div
      class="c3"
    >
      <div
        class="c4"
      />
      <div
        class="c5"
      />
    </div>
  </div>
</DocumentFragment>
`;
